# xrootd-prefs-plugins

./: CMakeLists.txt  README  prefsplugin_project_description.txt
pygeoip-database/: CMakeLists.txt
src/: CMakeLists.txt  GetHostname.py  IPGeoPlugin.py  PrefGeo.cc  PrefGeo.hh  PrefMatchTopDomain.cc  PrefOne.cc  PrefOne.hh
