
add_definitions ( -DPATH_PYTHON_SCRIPT="${CMAKE_BINARY_DIR}/src" )
find_package ( PythonInterp REQUIRED )
find_package ( PythonLibs REQUIRED )
include_directories ( ${XROOTD_INCLUDES} )
include_directories ( ${PYTHON_INCLUDE_DIRS} )
add_library ( PrefAllowXmi MODULE PrefAllow.cc )
add_library ( PrefDenyXmi MODULE PrefDeny.cc )
add_library ( PrefOneXmi MODULE PrefOne.cc )
add_library ( PrefClientXmi MODULE PrefClient.cc )
add_library ( PrefMatchTopDomainXmi MODULE PrefMatchTopDomain.cc )
add_library ( PrefGeoXmi MODULE PrefGeo.cc )
target_link_libraries ( PrefGeoXmi ${PYTHON_LIBRARIES} )
CONFIGURE_FILE ( ${CMAKE_SOURCE_DIR}/src/IPGeoPlugin.py ${CMAKE_BINARY_DIR}/src/IPGeoPlugin.py COPYONLY )
